little package namespace bugfix

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
   "extra": {
     "laravel": {
       "providers": [
-        "Swandam\\Code\\SwandamServiceProvider"
+        "Swandam\\Core\\SwandamServiceProvider"
       ]
     }
   },
